Revision history for {{$dist->name}}

{{$NEXT}}

1.98      2017-08-22 06:39:09 -0400
  - remove Dist::Zilla::Plugin::jQuery
  - remove AnyEvent::Git::Wrapper
  - remove Alien::Build::Plugin::Build::CMake
  - remove Alien::Build::Plugin::Build::Make
  - remove File::Touch
  - remove Cpanel::JSON::XS
  - add JSON::MaybeXS
  - remove Module::CoreList
  - update Mojolicious to 7.43
  - remove Net::DNS
  - remove Pod::Abstract
  - remove Rose::DB
  - remove Rose::DB::Object
  - remove Sereal::Decoder
  - remove Sereal::Encoder
  - remove Template::Tiny
  - remove Test::Differences
  - remove Test::Dir
  - remove Test::File
  - remove Text::Tabs
  - remove Try::Tiny
  - remove XML::Simple
  - remove XML::Writer
  - add Test::Alien::CPP
  - Updated my dists to latest

1.97      2017-08-15 14:44:04 -0400
  - remove App::palien (merged into App-af)
  - add Alien::cmake3
  - add Alien::Build::Plugin::Build::CMake
  - add Alien::Build::Plugin::Build::Make
  - add Alien::Role::Alt
  - add Alien::Role::Dino
  - remove Alien::Base::Dino
  - add Dist::Zilla::Plugin::CommentOut
  - Updated my dists to latest

1.96      2017-07-28 17:25:53 -0400
  - add Alien::Alien
  - remove Alien::Base
  - add Alien::Autotools
  - add Alien::Base::Dino
  - remove Alien::Base::Wrapper
  - add Alien::Build::Git
  - add Alien::Build::Plugin::Decode::SourceForge
  - add Alien::Build::Plugin::Fetch::Prompt
  - add Alien::Build::Plugin::Fetch::Rewrite
  - add Alien::GMP
  - add Alien::gzip
  - add File::ShareDir::Dist
  - add Test2::Plugin::FauxHomeDir
  - add Test2::Tools::URL
  - Updated my dists to latest

1.95      2017-07-12 20:22:33 -0400
  - Updated my dists to latest

1.94      2017-07-12 19:57:30 -0400
  - Remove Test::Alien
  - add Alien::autoconf
  - add Alien::automake
  - add Alien::Build::Plugin::Fetch::PromptBeforeDownload
  - add Alien::Build::Plugin::Probe::GnuWin32
  - add Alien::libtool
  - Updated my dists to latest

1.93      2017-05-23 10:37:49 -0400