@@ -35,7 +35,6 @@ Alien::Build::Plugin::Fetch::Cache             = 0.04
 Alien::Build::Plugin::Probe::GnuWin32          = 0.59
 Alien::Build::Plugin::Fetch::Prompt            = 0.59
 Alien::Build::Plugin::Fetch::Rewrite           = 0.02
-Alien::bz2::Installer                          = 0.05
 Alien::CMake                                   = 0.09
 Alien::cmake3                                  = 0.03
 Alien::curl                                    = 0.06
@@ -46,8 +45,6 @@ Alien::gmake                                   = 0.20
 Alien::GMP                                     = 1.04
 Alien::gzip                                    = 0.03
 Alien::Hunspell                                = 0.11
-Alien::Libarchive                              = 0.28
-Alien::Libarchive::Installer                   = 0.15
 Alien::Libarchive3                             = 0.28
 Alien::Libbz2                                  = 0.22
 Alien::libtool                                 = 0.09
