@@ -1,6 +1,9 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - remove Alien::Libarchive::Installer
+  - remove Alien::bz2::Installer
+  - remove Alien::Libarchive
 
 1.98      2017-08-22 06:39:09 -0400
   - remove Dist::Zilla::Plugin::jQuery
